--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
                 <li><a href="hw03.html" target="_blank">과제03</a></li>
                 <li><a href="hw04.html" target="_blank">과제04</a></li>
                 <li><a href="hw05.html" target="_blank">과제05</a></li>
+                <li><a href="hw06.html" target="_blank">과제06</a></li>
+                <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
             </div>
         </header>
