--- a/hw05.html
+++ b/hw05.html
@@ -2,8 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HomeWork #3</title>
+    <title>HomeWork #5</title>
     <style>
+         /*메뉴*/
+        #headC {
+                float: right;
+                margin-right: 15px;
+                color: #ffffff;
+            padding-bottom: 16px;
+        }
+         #h_menu ul {
+                margin: 0;
+                padding: 0;
+                margin-top: 10px;
+            }
+            #h_menu li {
+                list-style-type: none;
+                display: inline-block;
+                padding: 0px 0px 5px 0px;
+                margin-top: 18px;
+            }
+            #h_menu li a {
+                text-decoration: none;
+                color: black;
+                padding: 20px 5px;
+                margin-top: 10px;
+            }
+            #h_menu a:hover {
+                text-decoration: none;
+                color: #ea2965;
+                border-bottom: 2px dotted #ea2965;
+                font-family: "모리스9";
+            }
         #logo {
             font-family: "210 수필명조 020";
             text-decoration: none;
@@ -79,6 +109,19 @@
     </style>
 </head>
 <body>
+<!-- 메뉴 -->
+   <div id="headC">
+            <ul id="h_menu">
+                <li><a href="hw01.html" target="_blank">과제01</a></li>
+                <li><a href="hw02.html" target="_blank">과제02</a></li>
+                <li><a href="hw03.html" target="_blank">과제03</a></li>
+                <li><a href="hw04.html" target="_blank">과제04</a></li>
+                <li><a href="hw05.html" target="_blank">과제05</a></li>
+                <li><a href="hw06.html" target="_blank">과제06</a></li>
+                <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+            </ul>
+            </div>
 <!-- 인덱스 버튼 -->
    <div id=logo><p>
     <a href="index.html">J.Princess</a>
