--- a/hw03.html
+++ b/hw03.html
@@ -56,6 +56,8 @@
 <!-- 메뉴 -->
    <div id="headC">
             <ul id="h_menu">
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="profile.html" target="_blank">About</a></li>
                 <li><a href="hw01.html" target="_blank">과제01</a></li>
                 <li><a href="hw02.html" target="_blank">과제02</a></li>
                 <li><a href="hw03.html" target="_blank">과제03</a></li>
