--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,8 @@
   <!-- 메뉴 -->
  <div id="headC">
             <ul id="h_menu">
+                 <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="profile.html" target="_blank">About</a></li>
                 <li><a href="hw01.html" target="_blank">과제01</a></li>
                 <li><a href="hw02.html" target="_blank">과제02</a></li>
                 <li><a href="hw03.html" target="_blank">과제03</a></li>
@@ -156,6 +158,7 @@
                 <li><a href="hw05.html" target="_blank">과제05</a></li>
                 <li><a href="hw06.html" target="_blank">과제06</a></li>
                 <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
             </div>
    <!-- 프로필 버튼 -->
